@@ -8,6 +8,8 @@ Fix the check for image searching so it terminates.
 
 Smarten up error dialogs.
 
+Use variables for min/max number of pieces.
+
 1.4
 
 Remove applet; applets essentially don't work on the modern web.
